--- a/index.html
+++ b/index.html
@@ -14,28 +14,26 @@
         rel="stylesheet">
 </head>
 
-<body>
-    <section class="main-bg section">
-        <div class="main-content">
-            <h1>Lorem</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis iste animi facere ut tempora
-                nesciunt
-                optio! Ipsum impedit tempore dolor, corporis vel dolores sapiente laudantium unde aperiam odit,
-                accusamus
-                quisquam.</p>
-        </div>
-    </section>
+<body class="main-bg">
+    <aside class="menu white-bg">
+        <section class="main-content menu-content">
+            <h1>
+                <a href="#">Logo</a>
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Intro</a></li>
+                    <li><a href="#">Top 3</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </section>
+    </aside>
 
-    <section class="white-bg section">
-        <div class="main-content">
-            <h1>Lorem</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis iste animi facere ut tempora
-                nesciunt
-                optio! Ipsum impedit tempore dolor, corporis vel dolores sapiente laudantium unde aperiam odit,
-                accusamus
-                quisquam.</p>
-        </div>
-    </section>
+    <aside class="section"></aside>
+    <aside class="section"></aside>
 </body>
 
 </html>
