Separação do CSS em pastas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="recursos/css/variables.css">
+    <link rel="stylesheet" href="recursos/css/elements.css">
+    <link rel="stylesheet" href="recursos/css/classes.css">
+    <link rel="stylesheet" href="recursos/css/menu.css">
     <link rel="stylesheet" href="recursos/css/styles1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +20,7 @@
 
 <body class="main-bg">
     <aside class="menu white-bg">
-        <section class="main-content menu-content">
+        <div class="main-content menu-content">
             <h1>
                 <a href="#">Logo</a>
             </h1>
@@ -29,11 +33,31 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-        </section>
+        </div>
     </aside>
 
-    <aside class="section"></aside>
-    <aside class="section"></aside>
+    <div class="menu-spacing"></div>
+
+    <section class=" intro main-bg section">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>History</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo provident placeat nostrum omnis dolorem
+                    aperiam
+                    optio eligendi nam maiores, natus veniam, amet earum, dignissimos quod? Magni sed sunt ullam
+                    dolorem?
+                </p>
+            </div>
+
+            <div class="intro-img">
+                a imagem vem aqui
+            </div>
+        </div>
+    </section>
+
+    <section class="white-bg section">
+
+    </section>
 </body>
 
 </html>
