Inserção de Imagem

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class=" intro main-bg section">
         <div class="main-content intro-content">
             <div class="intro-text-content">
-                <h2>History</h2>
+                <h2>Our History</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo provident placeat nostrum omnis dolorem
                     aperiam
                     optio eligendi nam maiores, natus veniam, amet earum, dignissimos quod? Magni sed sunt ullam
@@ -50,7 +50,7 @@
             </div>
 
             <div class="intro-img">
-                a imagem vem aqui
+                <img src='recursos/img/undraw_fitness_stats_sht6.svg' alt="stats runner">
             </div>
         </div>
     </section>
