--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1>
-                <a href="#">Logo</a>
+                <a href="#home">Logo</a>
             </h1>
             <nav>
                 <ul>
-                    <li><a href="#">Intro</a></li>
-                    <li><a href="#">Top 3</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Work</a></li>
+                    <li><a href="#intro">Intro</a></li>
+                    <li><a href="#grid1">Grid 1</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -38,7 +37,7 @@
 
     <div class="menu-spacing"></div>
 
-    <section class=" intro main-bg section">
+    <section id="home" class=" intro main-bg section">
         <div class="main-content intro-content">
             <div class="intro-text-content">
                 <h2>Our History</h2>
@@ -55,7 +54,57 @@
         </div>
     </section>
 
-    <section class="white-bg section">
+    <section id="intro" class="main-bg section">
+        <div class="main-content top3-content">
+            <h2>top3 Activities</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur corporis voluptatibus quisquam
+                fugit dolorum consequuntur, culpa eveniet animi exercitationem molestias nisi quia eius nemo, expedita
+                odit alias vitae! Magni, natus!</p><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nostrum error voluptatibus nesciunt nemo
+                explicabo similique exercitationem repellat molestias consequatur ratione voluptates sed, dolorum quo
+                obcaecati facere voluptas, unde doloribus!</p><br>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, nesciunt cupiditate enim consequuntur
+                libero eveniet quidem! Dicta sit fuga quasi at commodi, ullam pariatur, ab nisi, blanditiis cupiditate
+                quam alias?</p>
+        </div>
+    </section>
+
+    <section id="grid1" class="grid1 main-bg section">
+        <div class="main-content grid1-content">
+            <h2 class="grid-main-heading">My Grid</h2>
+            <p class="grid-description">Descrição</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste1</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit saepe, ipsam libero dicta
+                        assumenda possimus cupiditate esse facilis cum debitis quae, ea, dignissimos atque eveniet
+                        deleniti
+                        aliquid. Assumenda, ullam ad.</p>
+                </article>
+
+                <article>
+                    <h3>Teste2</h3>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime enim, fuga eius aspernatur rem
+                        hic
+                        neque
+                        quia odit provident nam error excepturi laudantium harum magni! Inventore alias commodi
+                        temporibus
+                        corporis.</p>
+                </article>
+
+                <article>
+                    <h3>Teste3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum dicta repellendus nisi blanditiis.
+                        Eaque, minus corporis esse sit incidunt voluptatum doloribus amet delectus facere sapiente quos
+                        earum? Distinctio, vel animi?</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <section id="gallery" class="section white-bg">
+        <div class="main-bg"></div>
+        <h1>Teste</h1>
 
     </section>
 </body>
