--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li><a href="#intro">Intro</a></li>
                     <li><a href="#grid1">Grid 1</a></li>
                     <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#grid2">Grid 2</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -102,11 +103,84 @@
         </div>
     </section>
 
-    <section id="gallery" class="section white-bg">
-        <div class="main-bg"></div>
-        <h1>Teste</h1>
+    <section id="gallery" class="grid1 main-bg section">
+        <div class="main-content grid1-content">
+            <h2 class="grid-main-heading">Gallery</h2>
+            <p class="grid-description">Descrição</p>
+            <div class="grid">
+                <div class="gallery-img">
+                    <div>
+                        <img src="https://source.unsplash.com/random/360x360?r=1" alt="random-photo">
+                    </div>
+                </div>
 
+                <div class="gallery-img">
+                    <div>
+                        <img src="https://source.unsplash.com/random/360x360?r=2" alt="random-photo">
+                    </div>
+                </div>
+
+                <div class="gallery-img">
+                    <div>
+                        <img src="https://source.unsplash.com/random/360x360?r=3" alt="random-photo">
+                    </div>
+                </div>
+
+                <div class="gallery-img">
+                    <div>
+                        <img src="https://source.unsplash.com/random/360x360?r=4" alt="random-photo">
+                    </div>
+                </div>
+
+                <div class="gallery-img">
+                    <div>
+                        <img src="https://source.unsplash.com/random/360x360?r=5" alt="random-photo">
+                    </div>
+                </div>
+
+                <div class="gallery-img">
+                    <div>
+                        <img src="https://source.unsplash.com/random/360x360?r=6" alt="random-photo">
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <section id="grid2" class="grid1 main-bg section">
+        <div class="main-content grid1-content">
+            <h2 class="grid-main-heading">My Grid</h2>
+            <p class="grid-description">Descrição</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste1</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit saepe, ipsam libero dicta
+                        assumenda possimus cupiditate esse facilis cum debitis quae, ea, dignissimos atque eveniet
+                        deleniti
+                        aliquid. Assumenda, ullam ad.</p>
+                </article>
+
+                <article>
+                    <h3>Teste2</h3>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime enim, fuga eius aspernatur rem
+                        hic
+                        neque
+                        quia odit provident nam error excepturi laudantium harum magni! Inventore alias commodi
+                        temporibus
+                        corporis.</p>
+                </article>
+
+                <article>
+                    <h3>Teste3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum dicta repellendus nisi blanditiis.
+                        Eaque, minus corporis esse sit incidunt voluptatum doloribus amet delectus facere sapiente quos
+                        earum? Distinctio, vel animi?</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
