Ajuste da Tabela

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li><a href="#grid1">Grid 1</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#grid2">Grid 2</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -180,6 +181,66 @@
         </div>
     </section>
 
+    <section id="pricing" class="main-bg section">
+        <div class="main-content top3-content">
+            <h2>Pricing</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur corporis voluptatibus quisquam
+                fugit dolorum consequuntur, culpa eveniet animi exercitationem molestias nisi quia eius nemo, expedita
+                odit alias vitae! Magni, natus!</p>
+            <div class="responsive-table">
+                <table>
+                    <caption>Pricing Table</caption>
+                    <thead>
+                        <tr>
+                            <th>Title1</th>
+                            <th>Title2</th>
+                            <th>Title3</th>
+                            <th>Title4</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>Content1</td>
+                            <td>Content1</td>
+                            <td>Content1</td>
+                            <td>Content1</td>
+                        </tr>
+
+                        <tr>
+                            <td>Content2</td>
+                            <td>Content2</td>
+                            <td>Content2</td>
+                            <td>Content2</td>
+                        </tr>
+
+                        <tr>
+                            <td>Content3</td>
+                            <td>Content3</td>
+                            <td>Content3</td>
+                            <td>Content3</td>
+                        </tr>
+
+                        <tr>
+                            <td>Content4</td>
+                            <td>Content4</td>
+                            <td>Content4</td>
+                            <td>Content4</td>
+                        </tr>
+
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Nome do Rodapé</td>
+                        </tr>
+                    </tfoot>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
 
 </body>
 
