Form de Contato e Footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#grid2">Grid 2</a></li>
                     <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -241,6 +241,57 @@
             </div>
         </div>
     </section>
+
+    <section id="contact" class=" intro main-bg section">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>Our History</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo provident placeat nostrum omnis dolorem
+                    aperiam
+                    optio eligendi nam maiores, natus veniam, amet earum, dignissimos quod? Magni sed sunt ullam
+                    dolorem?
+                </p>
+            </div>
+
+            <div class="intro-img">
+                <img src='recursos/img/undraw_fitness_stats_sht6.svg' alt="stats runner">
+            </div>
+        </div>
+
+        <div class="contact-form">
+            <fieldset class="form-grid main-content">
+                <legend>Contact me</legend>
+
+                <div class="form-group">
+                    <label for="first-name">First Name</label>
+                    <input type="text" name="first-name" id="first-name" placeholder="Your Name">
+                </div>
+
+                <div class="form-group">
+                    <label for="last-name">Last Name</label>
+                    <input type="text" name="last-name" id="last-name" placeholder="Your Last Name">
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Email">
+                </div>
+
+                <div class="form-group full-width">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
+                </div>
+
+                <div class="form-group full-width">
+                    <button type="submit">Send Message</button>
+                </div>
+            </fieldset>
+        </div>
+    </section>
+
+    <footer id="footer" class="footer">
+        <p><a href="">Made with ❤ by Thiago Moura</a></p>
+    </footer>
 
 </body>
 
