--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 </head>
 
 <body class="main-bg">
+    <input id="close-menu" class="close-menu" type="checkbox" aria-label="Closemenu" role="button">
+    <label class="close-menu-label" for="close-menu" title="Close Menu"></label>
     <aside class="menu white-bg">
         <div class="main-content menu-content">
-            <h1>
+            <h1 onclick="getElementById('close-menu').checked = false;">
                 <a href="#home">Logo</a>
             </h1>
             <nav>
-                <ul>
-                    <li><a href="#intro">Intro</a></li>
+                <ul onclick="getElementById('close-menu').checked = false;">
+                    <li><a href=" #intro">Intro</a></li>
                     <li><a href="#grid1">Grid 1</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#grid2">Grid 2</a></li>
@@ -292,6 +294,8 @@
     <footer id="footer" class="footer">
         <p><a href="">Made with ❤ by Thiago Moura</a></p>
     </footer>
+
+    <a class="back-to-top" href="#">Top</a>
 
 </body>
 
